[gd_scene load_steps=6 format=3 uid="uid://ht07cxpnk5m5"]

[ext_resource type="Script" path="res://export_png.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ct1rn5y3od002" path="res://locked.png" id="2_guku6"]
[ext_resource type="Texture2D" uid="uid://boadljilggckc" path="res://unlocked.png" id="2_vya7j"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_r8i8c"]
noise_type = 4
seed = 1
domain_warp_amplitude = 60.0
domain_warp_fractal_type = 0
domain_warp_fractal_gain = 0.1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_nr1pi"]
noise = SubResource("FastNoiseLite_r8i8c")

[node name="NoiseGeneration" type="SubViewportContainer"]
script = ExtResource("1")
viewport_path = NodePath("SubViewport")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(1024, 512)
render_target_update_mode = 4

[node name="Box" type="HBoxContainer" parent="SubViewport"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Noise" type="Sprite2D" parent="SubViewport/Box"]
texture = SubResource("NoiseTexture2D_nr1pi")
centered = false
offset = Vector2(512, 0)

[node name="HB" type="HBoxContainer" parent="SubViewport/Box"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="SubViewport/Box/HB"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ButtonSave" type="Button" parent="SubViewport/Box/HB/Controls"]
modulate = Color(0.305882, 1, 0.447059, 1)
layout_mode = 2
text = "Save"

[node name="ButtonRandom" type="Button" parent="SubViewport/Box/HB/Controls"]
modulate = Color(1, 0.596078, 0.317647, 1)
layout_mode = 2
text = "Randomize"

[node name="ButtonReset" type="Button" parent="SubViewport/Box/HB/Controls"]
modulate = Color(1, 0, 0.160784, 1)
layout_mode = 2
text = "Reset"

[node name="HSeparator" type="HSeparator" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2

[node name="NoiseType" type="HBoxContainer" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls/NoiseType"]
layout_mode = 2
text = "Noise Type
"

[node name="VSeparator2" type="VSeparator" parent="SubViewport/Box/HB/Controls/NoiseType"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls/NoiseType"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="NoiseTypeOption" type="OptionButton" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
flat = true
item_count = 6
selected = 1
popup/item_0/text = "Simplex"
popup/item_0/id = 0
popup/item_1/text = "Simplex Smooth"
popup/item_1/id = 1
popup/item_2/text = "Cellular"
popup/item_2/id = 2
popup/item_3/text = "Perlin"
popup/item_3/id = 3
popup/item_4/text = "Cubic"
popup/item_4/id = 4
popup/item_5/text = "Value"
popup/item_5/id = 5

[node name="HSeparator7" type="HSeparator" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2

[node name="FractalType" type="HBoxContainer" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls/FractalType"]
layout_mode = 2
text = "Fractal Type
"

[node name="VSeparator2" type="VSeparator" parent="SubViewport/Box/HB/Controls/FractalType"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls/FractalType"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="FractalTypeOption" type="OptionButton" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
flat = true
item_count = 4
selected = 1
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "FBM"
popup/item_1/id = 1
popup/item_2/text = "Ridged"
popup/item_2/id = 2
popup/item_3/text = "Ping-Pong"
popup/item_3/id = 3

[node name="HSeparator6" type="HSeparator" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2

[node name="Seed" type="HBoxContainer" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="LabelSeed" type="Label" parent="SubViewport/Box/HB/Controls/Seed"]
layout_mode = 2
text = "Seed"

[node name="VSeparator2" type="VSeparator" parent="SubViewport/Box/HB/Controls/Seed"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls/Seed"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="HSliderSeed" type="HSlider" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
max_value = 4e+06
rounded = true

[node name="HSeparator8" type="HSeparator" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2

[node name="Frequency" type="HBoxContainer" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="LabelSeed2" type="Label" parent="SubViewport/Box/HB/Controls/Frequency"]
layout_mode = 2
text = "Frequency"

[node name="VSeparator2" type="VSeparator" parent="SubViewport/Box/HB/Controls/Frequency"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls/Frequency"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="HSliderFrequency" type="HSlider" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
min_value = 0.1
max_value = 4.0
step = 0.1
value = 2.0

[node name="HSeparator2" type="HSeparator" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2

[node name="Octaves" type="HBoxContainer" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls/Octaves"]
layout_mode = 2
text = "Octaves"

[node name="VSeparator2" type="VSeparator" parent="SubViewport/Box/HB/Controls/Octaves"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls/Octaves"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="HSliderOctaves" type="HSlider" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
max_value = 9.0
value = 4.0
rounded = true

[node name="HSeparator5" type="HSeparator" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2

[node name="Lacunarity" type="HBoxContainer" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls/Lacunarity"]
layout_mode = 2
text = "Lacunarity"

[node name="VSeparator" type="VSeparator" parent="SubViewport/Box/HB/Controls/Lacunarity"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls/Lacunarity"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="HSliderLacunarity" type="HSlider" parent="SubViewport/Box/HB/Controls"]
layout_mode = 2
min_value = 0.1
max_value = 10.0
step = 0.1
value = 2.0

[node name="VSeparator" type="VSeparator" parent="SubViewport/Box/HB"]
layout_mode = 2

[node name="Controls2" type="VBoxContainer" parent="SubViewport/Box/HB"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Gain" type="HBoxContainer" parent="SubViewport/Box/HB/Controls2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="LabelGain" type="Label" parent="SubViewport/Box/HB/Controls2/Gain"]
layout_mode = 2
text = "Gain"

[node name="VSeparator" type="VSeparator" parent="SubViewport/Box/HB/Controls2/Gain"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls2/Gain"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="HSliderGain" type="HSlider" parent="SubViewport/Box/HB/Controls2"]
layout_mode = 2
min_value = 0.01
max_value = 1.0
step = 0.1
value = 0.51

[node name="HSeparator4" type="HSeparator" parent="SubViewport/Box/HB/Controls2"]
layout_mode = 2

[node name="WeightedStr" type="HBoxContainer" parent="SubViewport/Box/HB/Controls2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="LabelWeighted" type="Label" parent="SubViewport/Box/HB/Controls2/WeightedStr"]
layout_mode = 2
tooltip_text = "Weighted Strength"
mouse_filter = 1
text = "Wgt. Str."

[node name="VSeparator" type="VSeparator" parent="SubViewport/Box/HB/Controls2/WeightedStr"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls2/WeightedStr"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="HSliderWeighted" type="HSlider" parent="SubViewport/Box/HB/Controls2"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="VSeparator2" type="VSeparator" parent="SubViewport/Box/HB"]
layout_mode = 2

[node name="Controls3" type="VBoxContainer" parent="SubViewport/Box/HB"]
layout_mode = 2

[node name="DomainWarpTitle" type="Label" parent="SubViewport/Box/HB/Controls3"]
layout_mode = 2
text = "Domain Warp"
horizontal_alignment = 1

[node name="DomainWarpEnable" type="HBoxContainer" parent="SubViewport/Box/HB/Controls3"]
layout_mode = 2

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls3/DomainWarpEnable"]
layout_mode = 2
text = "Enabled"

[node name="CheckButton" type="CheckButton" parent="SubViewport/Box/HB/Controls3/DomainWarpEnable"]
layout_mode = 2
expand_icon = true

[node name="DomainControls" type="VBoxContainer" parent="SubViewport/Box/HB/Controls3"]
visible = false
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2

[node name="DWAmplitude" type="HBoxContainer" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls3/DomainControls/DWAmplitude"]
layout_mode = 2
text = "Amplitude"

[node name="VSeparator" type="VSeparator" parent="SubViewport/Box/HB/Controls3/DomainControls/DWAmplitude"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls3/DomainControls/DWAmplitude"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="Amplitude" type="HSlider" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
step = 0.1
value = 30.0

[node name="DWGain" type="HBoxContainer" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls3/DomainControls/DWGain"]
layout_mode = 2
text = "Gain"

[node name="VSeparator" type="VSeparator" parent="SubViewport/Box/HB/Controls3/DomainControls/DWGain"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls3/DomainControls/DWGain"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="Gain" type="HSlider" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="DWLacunarity" type="HBoxContainer" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls3/DomainControls/DWLacunarity"]
layout_mode = 2
text = "Lacunarity"

[node name="VSeparator" type="VSeparator" parent="SubViewport/Box/HB/Controls3/DomainControls/DWLacunarity"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls3/DomainControls/DWLacunarity"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="Lacunarity" type="HSlider" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
min_value = 1.0
max_value = 20.0
value = 5.0

[node name="DWOctaves" type="HBoxContainer" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls3/DomainControls/DWOctaves"]
layout_mode = 2
text = "Octaves"

[node name="VSeparator" type="VSeparator" parent="SubViewport/Box/HB/Controls3/DomainControls/DWOctaves"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls3/DomainControls/DWOctaves"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="Octaves" type="HSlider" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
min_value = 1.0
max_value = 20.0
value = 5.0

[node name="DWFrequency" type="HBoxContainer" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls3/DomainControls/DWFrequency"]
layout_mode = 2
text = "Frequency"

[node name="VSeparator" type="VSeparator" parent="SubViewport/Box/HB/Controls3/DomainControls/DWFrequency"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls3/DomainControls/DWFrequency"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="Frequency" type="HSlider" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
min_value = 0.01
max_value = 0.2
step = 0.01
value = 0.05

[node name="DWFractalType" type="HBoxContainer" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls3/DomainControls/DWFractalType"]
layout_mode = 2
text = "Fractal Type"

[node name="VSeparator" type="VSeparator" parent="SubViewport/Box/HB/Controls3/DomainControls/DWFractalType"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls3/DomainControls/DWFractalType"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="FracType" type="OptionButton" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Progressive"
popup/item_1/id = 1
popup/item_2/text = "Independent"
popup/item_2/id = 2

[node name="DWWarpType" type="HBoxContainer" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="SubViewport/Box/HB/Controls3/DomainControls/DWWarpType"]
layout_mode = 2
text = "Warp Type"

[node name="VSeparator" type="VSeparator" parent="SubViewport/Box/HB/Controls3/DomainControls/DWWarpType"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Lock" type="TextureButton" parent="SubViewport/Box/HB/Controls3/DomainControls/DWWarpType"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vya7j")
texture_pressed = ExtResource("2_guku6")
stretch_mode = 3

[node name="WarpType" type="OptionButton" parent="SubViewport/Box/HB/Controls3/DomainControls"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Simplex"
popup/item_0/id = 0
popup/item_1/text = "Simplex Reduced"
popup/item_1/id = 1
popup/item_2/text = "Basic Grid"
popup/item_2/id = 2

[connection signal="pressed" from="SubViewport/Box/HB/Controls/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="SubViewport/Box/HB/Controls/ButtonRandom" to="." method="_on_button_random_pressed"]
[connection signal="pressed" from="SubViewport/Box/HB/Controls/ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="item_selected" from="SubViewport/Box/HB/Controls/NoiseTypeOption" to="." method="_on_noise_type_option_item_selected"]
[connection signal="item_selected" from="SubViewport/Box/HB/Controls/FractalTypeOption" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="SubViewport/Box/HB/Controls/HSliderSeed" to="." method="_on_h_slider_seed_value_changed"]
[connection signal="value_changed" from="SubViewport/Box/HB/Controls/HSliderFrequency" to="." method="_on_h_slider_lacunarity_value_changed"]
[connection signal="value_changed" from="SubViewport/Box/HB/Controls/HSliderOctaves" to="." method="_on_h_slider_octaves_value_changed"]
[connection signal="value_changed" from="SubViewport/Box/HB/Controls/HSliderLacunarity" to="." method="_on_h_slider_lacunarity_value_changed"]
[connection signal="value_changed" from="SubViewport/Box/HB/Controls2/HSliderGain" to="." method="_on_h_slider_gain_value_changed"]
[connection signal="value_changed" from="SubViewport/Box/HB/Controls2/HSliderWeighted" to="." method="_on_h_slider_weighted_value_changed"]
[connection signal="toggled" from="SubViewport/Box/HB/Controls3/DomainWarpEnable/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="value_changed" from="SubViewport/Box/HB/Controls3/DomainControls/Amplitude" to="." method="_on_amplitude_value_changed"]
[connection signal="value_changed" from="SubViewport/Box/HB/Controls3/DomainControls/Gain" to="." method="_on_gain_value_changed"]
[connection signal="value_changed" from="SubViewport/Box/HB/Controls3/DomainControls/Lacunarity" to="." method="_on_lacunarity_value_changed"]
[connection signal="value_changed" from="SubViewport/Box/HB/Controls3/DomainControls/Octaves" to="." method="_on_octaves_value_changed"]
[connection signal="value_changed" from="SubViewport/Box/HB/Controls3/DomainControls/Frequency" to="." method="_on_frequency_value_changed"]
[connection signal="item_selected" from="SubViewport/Box/HB/Controls3/DomainControls/FracType" to="." method="_on_frac_type_item_selected"]
[connection signal="item_selected" from="SubViewport/Box/HB/Controls3/DomainControls/WarpType" to="." method="_on_warp_type_item_selected"]
